--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=fsweb-s17d1
+server.port=8585
+spring.devtools.restart.enabled=true
+
+course.name=Full Stack Web Development
+project.developer.fullname=?eyma Ezgi As?lsoy
+
